# bevy_file_asset

./: Cargo.toml  README.md
example/: minimal.rs
src/: lib.rs
