[package]
name = "bevy_file_asset"
description = "bevy file asset plugin"
version = "0.1.0"
edition = "2024"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
keywords = [
  "bevy",
  "asset",
]
categories = [
  "graphics",
]
homepage = "https://github.com/mosure/bevy_file_asset"
repository = "https://github.com/mosure/bevy_file_asset"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]


[dependencies]
base64 = { version = "0.22", optional = true }
futures = "0.3"
serde = "1.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"


[dependencies.bevy]
version = "0.15"
default-features = false
features = [
  "bevy_asset",
  "serialize",
  "x11",
]


[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
futures-intrusive = { version = "0.5.0" }
pollster = { version = "0.4.0" }
tempfile = "3.17"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }

[dev-dependencies.bevy]
version = "0.15"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_window",
  "png",
  "webgl2",
  "x11",
]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1


[lib]
path = "src/lib.rs"

[[example]]
name = "minimal"
path = "example/minimal.rs"
